# Assert-Plus-Plus

Assertive/: Assertive.cpp  CMakeLists.txt  readme.md
Assertive/Assertive/: Assertive.h
